# Tonalite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cue.cpp  Cue.hpp  Fixture.cpp  Fixture.hpp  Group.cpp  Group.hpp  README.md  Show_2020-03-09T15-10-33.tonalite  Utilities.cpp  Utilities.hpp  appveyor.yml  build.sh  colorPalettes.json  error-Tue Nov 19 2019 05:38:39 GMT-0500 (Eastern Standard Time).txt  error-Tue Nov 19 2019 05:39:01 GMT-0500 (Eastern Standard Time).txt  error-Tue Nov 19 2019 06:10:50 GMT-0500 (Eastern Standard Time).txt  fixtureChipsCode.js  index.html  index.js  index.min.html  localhost.crt  localhost.key  main.cpp  package-lock.json  package.json  presets.html  presets.min.html  run.sh  settings.json.new  settings.json.save  show.tonalite
.github/: FUNDING.yml
cppsrc/: functions.cpp  functions.h
custom-fixtures/: test.jlib
docs/: README.md  SUMMARY.md  book.json  configuration.md  grandmaster_and_blackout.md  keyboard_shortcuts.md  supported_hardware.md  supported_software.md
fixtures/: 0energylighting-flexaray75-c-d1001.jlib  0energylighting-flexaray75-c-d1001.json  0energylighting-flexaray75-c-d2001.jlib  0energylighting-flexaray75-c-d2001.json  0energylighting-flexaray75-c-d3001.jlib  0energylighting-flexaray75-c-d3001.json  0energylighting-flexaray75-c-d4001.jlib  0energylighting-flexaray75-c-d4001.json  0energylighting-flexaray75-v-d1001.jlib  0energylighting-flexaray75-v-d1001.json  0energylighting-flexaray75-v-d2001.jlib  0energylighting-flexaray75-v-d2001.json  0energylighting-flexaray75-v-d3001.jlib  0energylighting-flexaray75-v-d3001.json  0energylighting-flexaray75-v-d4001.jlib  0energylighting-flexaray75-v-d4001.json  7c-lighting-108x3-led-moving-head-16b.jlib  7c-lighting-108x3-led-moving-head-16b.json  7c-lighting-108x3-led-moving-head-8b.jlib  7c-lighting-108x3-led-moving-head-8b.json  a-o-lighting-falcon-6000-cmy-.jlib  a-o-lighting-falcon-6000-cmy.jlib  a-o-lighting-falcon-6000-cmy.json  a-o-lighting-falcon-beam-7000w-.jlib  a-o-lighting-falcon-beam-7000w.jlib  a-o-lighting-falcon-beam-7000w.json  a-o-lighting-falcon-beam-8000w-.jlib  a-o-lighting-falcon-beam-8000w.jlib  a-o-lighting-falcon-beam-8000w.json  a-o-lighting-falcon-beam-color-2000w-.jlib  a-o-lighting-falcon-beam-color-2000w.jlib  a-o-lighting-falcon-beam-color-2000w.json  a-o-lighting-falcon-beam-color-3000w-.jlib  a-o-lighting-falcon-beam-color-3000w.jlib  a-o-lighting-falcon-beam-color-3000w.json  a-o-lighting-falcon-flower-color-2000w-.jlib  (+39331 more)
(+23905 files in other folders)
